less/theme-common.less
/* ... */
.btn-round-text {
    font-family: @font-family-sans-serif;
    font-size: @font-size-small;
    line-height: 1em;
}

// Fixed positions for buttons
// ---------------------------------------------

.fixed-btn-container {

    position: fixed;
    right: @button-spacing-right;
    top: @button-spacing-top;
    z-index: 7;

    .btn-round {
        z-index: 5;
        display: block;
    }

    // Adjusted for Text to speech
    // --------------------------------------
    &#navigation-btn-container {
        top: @button-spacing-top;
    }
    &#bookmarks-btn-container {
        top: (((@btn-round-size + @button-spacing-top) * 1) + @button-spacing-top);
    }
    &#donate-btn-container {
        top: (((@btn-round-size + @button-spacing-top) * 2) + @button-spacing-top);
    }
    /*
    &#tts-btn-container {
        top: (((@btn-round-size + @button-spacing-top) * 2) + @button-spacing-top);
    }*/
    &#rewind-btn-container {
        top: (((@btn-round-size + @button-spacing-top) * 2) + @button-spacing-top);
    }
    &#link-to-top-container {
        top: auto;
        bottom: @button-spacing-top;
    }
    &.close-btn-container  {
        position: absolute;
        top: -(@btn-round-size / 2);
        z-index: 8;
    }
    &.close-btn-container.right  {
        position: fixed;
        top: @button-spacing-top;
    }

    @media only screen and (max-width: @screen-md) {
        
        // Adjusted for Text to speech
        // --------------------------------------
        &#navigation-btn-container {
            top: auto;
            bottom: 15px;
            right: @button-spacing-top;
        }
        &#bookmarks-btn-container {
            top: auto;
            bottom: 15px;
            right: (((@btn-round-size + @button-spacing-top) * 1) + @button-spacing-top);
        }
        &#donate-btn-container {
            top: auto;
            bottom: 15px;
            right: (((@btn-round-size + @button-spacing-top) * 2) + @button-spacing-top);
        }
        /*
        &#tts-btn-container {
            top: auto;
            bottom: 15px;
            right: (((@btn-round-size + @button-spacing-top) * 2) + @button-spacing-top);
        }*/
        &#link-to-top-container {
            top: auto;
            bottom: 15px;
            right: @button-spacing-top; // Position overriden in theme-reading-room
        }
        &#rewind-btn-container {
            top: auto;
            bottom: 15px;
            right: (((@btn-round-size + @button-spacing-top) * 3) + @button-spacing-top);
        }
        &.close-btn-container.right  {
            position: fixed;
            top: @button-spacing-top;
            right: @button-spacing-top;
            z-index: 8;
        }
    }

}

// Link to top button
// ---------------------------------
a#link-to-top {
    .opacity(0);
    &.in {
        .opacity(1);
    }
}


// Big panel headings
// ----------------------------------
.panel-heading {

    width: 100%;

    .bookmark-button {

        text-align: right;

        a {
            display: inline-block;
            width: 30px;
            height: 30px;
            border-radius: 15px;
            font-size: @font-size-large;
            line-height: 20px;
            padding: 5px 0px;
            text-align: center;
            background-color: @brand-red;
            color: #fff;
            .transition(.25s ease-in);
            &:hover {
                background-color: #fff;
                color: @brand-red;
            }
        }
    }

    .breadcrumb {
        margin-bottom: 0px;
        padding: 0px;
        > li + li:before {
            padding: 0 5px 0 10px;
        }
        a {
            text-decoration: underline;
        }
    }

}

.panel-default {
    .panel-heading-bold {

        width: 100%;
        background-color: @brand-red;
        padding: @panel-heading-padding;

        &, a, li {
            color: #fff;
        }

        .title {
            font-size: @font-size-large;
            font-family: @font-family-bold;
            font-style: normal;
            text-align: left;
        }

        .label {
            margin-left: 8px;
        }

    }

    .panel-heading-danger {
        background-color: @brand-red-alert;
    }

    @media only screen and (max-width: @screen-sm) {
        margin: 0px;
        border-bottom: 1px solid @gray-border-color;
        .box-shadow(none);
        //padding-bottom: 40px;
    }
}


// Pop-up footer for notes and glossary
// ------------------------------------
.fixed-footer {

    position:fixed;
    bottom:0px;
    left:0px;
    right: 0px;
    background-color: #fff;
    border-top: 1px solid @hr-border;
    z-index: 5;

    .container {
        position: relative;
        > .panel {
            margin-top: 0;
            margin-bottom: 0;
            padding-top: (@line-height-computed / 2);
            padding-bottom: @line-height-computed;
            > .panel-body {
                padding-bottom: 0px;
                padding-top: 0px;
            }
        }
    }
    .fix-height {
        overflow: auto;
        min-height: 70px;
    }
    .glossary-item {
        margin-bottom: 0px;
    }
}



// Pop-out sidebar for contents and bookmarks
// ------------------------------------------
.fixed-sidebar {

    position:fixed;
    bottom:0px;
    top:0px;
    right: 0px;
    background-color: #fff;
    border-left: 1px solid @hr-border;
    height: 100%;
    overflow: auto;
    z-index: 9;

    .container {
        position: relative;
        padding: 20px;
    }

    .fix-width {
        overflow: auto;
        margin-right: 70px;
    }

    h2, h4 {
        margin-top: 0px !important;
        text-align: left !important;
    }

    h4 {
        color: @text-color;
    }

}
/* ... */

